--- a/master/ChatDemo-parent/API/pom.xml
+++ b/master/ChatDemo-parent/API/pom.xml
@@ -10,6 +10,10 @@
     </parent>
 
     <artifactId>API</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>Rigster</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -18,9 +22,11 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>org.zmy</groupId>
+            <artifactId>Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
