--- a/master/ChatDemo-parent/pom.xml
+++ b/master/ChatDemo-parent/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>API</module>
         <module>Server</module>
+        <module>Common</module>
     </modules>
 
     <parent>
@@ -40,5 +41,10 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
