注册功能的服务模块

--- a/master/ChatDemo-parent/pom.xml
+++ b/master/ChatDemo-parent/pom.xml
@@ -12,6 +12,7 @@
         <module>API</module>
         <module>Server</module>
         <module>Common</module>
+        <module>Server/Register-server</module>
     </modules>
 
     <parent>
