--- a/master/ChatDemo-parent/API/Rigster/pom.xml
+++ b/master/ChatDemo-parent/API/Rigster/pom.xml
@@ -8,8 +8,10 @@
         <artifactId>API</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
+    <groupId>org.zmy</groupId>
     <artifactId>Rigster</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
