--- a/master/ChatDemo-parent/Server/Register-server/pom.xml
+++ b/master/ChatDemo-parent/Server/Register-server/pom.xml
@@ -5,17 +5,24 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.zmy</groupId>
-        <artifactId>ChatDemo-parent</artifactId>
+        <artifactId>Server</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
+    <groupId>org.zmy</groupId>
     <artifactId>Register-server</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+   <dependencies>
+       <dependency>
+           <groupId>org.zmy</groupId>
+           <artifactId>Rigster</artifactId>
+           <version>1.0-SNAPSHOT</version>
+       </dependency>
+   </dependencies>
 </project>
