--- a/master/ChatDemo-parent/Server/pom.xml
+++ b/master/ChatDemo-parent/Server/pom.xml
@@ -9,8 +9,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.zmy</groupId>
     <artifactId>Server</artifactId>
-
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
@@ -52,6 +54,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
             <version>2.2.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
         </dependency>
     </dependencies>
 </project>
