--- a/master/ChatDemo-parent/Server/pom.xml
+++ b/master/ChatDemo-parent/Server/pom.xml
@@ -59,5 +59,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.3.2.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
