--- a/master/ChatDemo-parent/Server/pom.xml
+++ b/master/ChatDemo-parent/Server/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>Server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>login</module>
+    </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
